--- a/index.html
+++ b/index.html
@@ -4,7 +4,56 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="style.css">
+    <!--<link rel="stylesheet" href="style.css">-->
+    <style>
+        * {
+        background-color: black;
+        }
+        #body {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            margin-top: 115px;
+        }
+        #container {
+            border: 2px solid lightgrey;
+            background-color: white;
+            border-radius: 3px;
+            width: 210px;
+        }
+        #container:hover {
+            box-shadow: 0px 0px 50px 50px lightcoral;
+        }
+        #container:active {
+            box-shadow: 0px 0px 50px 50px lightgreen;
+        }
+        #consol {
+            margin: 10px;
+            margin-bottom: 2px;
+            font-weight: bold;
+            padding: 3px;
+            width: 85%;
+            border: 2px solid lightgrey;
+            box-sizing: border-box;
+            font-size:20px ;
+            background-color: white;
+        }
+        .butt {
+            height: 45px;
+            width: 45px;
+            margin: 5px;
+            font-size: 15px;
+            font-weight: 700;
+            background-color: white;
+        }
+        .buttons {
+            display: flex;
+            justify-content: center;
+            margin-top: 10px;
+            flex-wrap: wrap;
+            background-color: white;
+        }
+    </style>
 </head>
 <body id="body">
     <div id="container">
